# fbk-llm

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
fbk_dev/: merge_mr.py
src/speech_foundation_models/cli/: whisper_gen.py
src/speech_foundation_models/data/: audio_iterators.py
src/speech_foundation_models/inference/: asr_args.py
tests/test_speech_foundation_models/inference/: test_audio_iterators.py  test_librilight_audio_iterators.py  test_voxpopuli_audio_iterators.py  test_yaml_audio_iterators.py
tests/test_speech_foundation_models/inference/resources/: shas_sentence_def.yaml  voxpopuli.tsv
works/: MOSEL.md
